Implement duration options for users and rooms
Allow admins to specify minute increments for durations

--- a/app/views/event_requests/new.html.erb
+++ b/app/views/event_requests/new.html.erb
@@ -1,16 +1,12 @@
 <div class="row pt-2">
-  <div class="col-md-6">
-    <h1>Schedule <%= @form.context.room.name %></h1>
-  </div>
-</div>
-
-<div class="row pt-2">
-  <div class="col-md-6">
-    <%= bootstrap_form_for @form, url: room_event_requests_path, data: { controller: "event_request" } do |f| %>
+  <div class="col-lg-8">
+    <h1 class="pb-4">Schedule <%= @form.context.room.name %></h1>
+    <%= bootstrap_form_for @form, url: room_event_requests_path,
+                                  data: { controller: "event_request" } do |f| %>
       <%= f.text_field :ohioid, placeholder: t("event.ohioid", scope: ["helpers", "label"]), append: "@" << Settings.domain %>
       <%= f.hidden_field :start_at, data: { target: "event_request.dateTime" } %>
-      <%= f.date_field :date, min: "TODO", max: "TODO", required: true, data: { target: "event_request.date", action: "event_request#update" } %>
-      <%= f.time_field :time, min: "TODO", max: "TODO", step: "1800", required: true, data: { target: "event_request.time", action: "event_request#update" } %>
+      <%= f.date_field :date, min: f.object.date_min, max: f.object.date_max, required: true, data: { target: "event_request.date", action: "event_request#update" } %>
+      <%= f.time_field :time, step: "1800", required: true, data: { target: "event_request.time", action: "event_request#update" } %>
       <%= f.select :duration, options_for_select(f.object.duration_select_options, f.object.duration_select_default) %>
       <%= f.text_area :purpose, class: "form-control", rows: 3 %>
       <%= f.submit "Request" %>
