--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 
 @import "rails_bootstrap_forms";
 @import "toast/grid";
+@import "colors";
 @import "bootstrap/custom";
 
 $appalachian_sunset: #ff701a;
