--- a/app/views/layouts/screens/single/_bottom.html.erb
+++ b/app/views/layouts/screens/single/_bottom.html.erb
@@ -14,13 +14,13 @@
     <div class="grid__col grid__col--6-of-12 center">
       <p id="up-next"><%= room.decorate.availability %></p>
       <p id="ou-logo">
-        <%= image_tag("OHIO_Patton_Logo_White.png") %>
+        <%= ohio_image %>
       </p>
     </div>
 
     <div class="grid__col grid__col--3-of-12 center">
       <p id="logo">
-        <%= image_tag("CalledToLead-Blue.gif") %>
+        <%= patton_college_image %>
       </p>
       <p id="clock">
         <%= now_time %>
