--- a/app/views/layouts/screens/_no_rooms.html.erb
+++ b/app/views/layouts/screens/_no_rooms.html.erb
@@ -1,9 +1,11 @@
-<div class="grid">
-  <div class="grid__col grid__col--12-of-12">
+<div class="row">
+  <div class="col-12">
     <h1>ERROR</h1>
   </div>
+</div>
 
-  <div class="grid__col grid__col--12-of-12">
+<div class="row">
+  <div class="col-12">
     <p><%= @screen.name %> has no rooms configured; Please add a room in the admin interface</p>
   </div>
 </div>
