--- a/app/views/slides/_all-schedule-slide.html.erb
+++ b/app/views/slides/_all-schedule-slide.html.erb
@@ -1,84 +1,81 @@
 <!-- Style -->
 <style>
-div.all-schedule-frame {
-  padding-top: 250px;
-  font-size: 22px;
-  color: black;
-}
-div.all-schedule-frame table th {
-  text-align: left;
-  padding: 0.5em;
-  font-size: 20px;
-  font-weight: lighter;
-  border-bottom: 1px solid #08324f;
-  color: black;
-}
-div.all-schedule-frame table td {
-  color: black;
-}
-div.all-schedule-frame .name {
-  padding-right: 18px;
-}
-div.all-schedule-frame table td.timeslot {
-  background-color: #a10037;
-}
-div.all-schedule-frame table td.timeslot.available {
-  background-color: #0a8324;
-}
-
-div.all-schedule-frame .legend {
-  padding-top: 40px;
-  font-size: 18px;
-}
-
-div.all-schedule-frame .legend .legend-item {
-  padding: 10px;
-  display: inline-block;
-  color: white;
-}
+  div.all-schedule-frame {
+    padding-top: 250px;
+    font-size: 22px;
+    color: black;
+  }
+  div.all-schedule-frame table th {
+    text-align: left;
+    padding: 0.5em;
+    font-size: 20px;
+    font-weight: bold;
+    border-bottom: 1px solid #08324f;
+    color: black;
+  }
+  div.all-schedule-frame table td {
+    color: black;
+  }
+  div.all-schedule-frame .name {
+    padding-right: 18px;
+    font-size: 20px;
+    min-width: 175px;
+  }
+  div.all-schedule-frame table td.timeslot {
+    background-color: #a10037;
+  }
+  div.all-schedule-frame table td.timeslot.available {
+    background-color: #0a8324;
+  }
+  div.all-schedule-frame .legend {
+    padding-top: 40px;
+    font-size: 18px;
+  }
+  div.all-schedule-frame .legend .legend-item {
+    padding: 10px;
+    display: inline-block;
+    color: white;
+  }
 </style>
-
 <!-- Variables -->
-<% all_times = Time.current.floor_to(60.minutes).ranged_by(5.hours, step: 30.minutes) %>
+<% all_times = Time.current.floor_to(60.minutes).ranged_by(4.hours, step: 30.minutes) %>
 <% all_rooms = Room.all.decorate %>
-
 <!-- Markup/Logic -->
-<div class="grid">
-  <div class="grid__col grid__col--12-of-12">
-    <div class="all-schedule-frame center">
-      <h3>Project Room Availability</h3>
-      <table align="center">
+<div class="d-flex justify-content-center align-items-center text-center px-2">
+  <div class="all-schedule-frame">
+    <h3>Project Room Availability</h3>
+    <table align="center">
+      <tr>
+        <th>Room Name</th>
+        <% all_times.each do |time| %>
+          <th><%= time.to_formatted_s(:hour_min_ampm).strip %></th>
+        <% end %>
+      </tr>
+      <% all_rooms.each do |room| %>
         <tr>
-          <th>Room Name</th>
+          <!-- Name of Room -->
+          <td class="name">
+            <%= room.name %>
+          </td>
+          <!-- Available Times -->
           <% all_times.each do |time| %>
-            <th><%= time.to_formatted_s(:hour_min_ampm) %></th>
+            <%= content_tag :td, nil, class: ["timestamp", room.available_class_for(time)] %>
           <% end %>
         </tr>
-        <% all_rooms.each do |room| %>
-          <tr>
-            <!-- Name of Room -->
-            <td class="name" style="min-width: 175px"><%= room.name %></td>
-
-            <!-- Available Times -->
-            <% all_times.each do |time| %>
-              <%= content_tag :td, "", class: ["timestamp", room.available_class_for(time)] %>
-            <% end %>
-          </tr>
-        <% end %>
-      </table>
-      <div class="legend">
-        <div class="legend-item" style="color: black;">
-          Legend:
-        </div>
-        <div class="legend-item available">
-          Available
-        </div>
-        <div class="legend-item unavailable">
-          Unavailable
-        </div>
-        <div class="legend-item closed">
-          Closed
-        </div>
+      <% end %>
+    </table>
+    <div class="legend">
+      <div class="legend-item" style="color: black;">
+        Legend:
+      </div>
+      <div class="legend-item available">
+        Available
+      </div>
+      <div class="legend-item unavailable">
+        Unavailable
+      </div>
+      <div class="legend-item closed">
+        Closed
       </div>
     </div>
   </div>
