--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -1,15 +1,8 @@
-// SASS variable overrides must be declared before loading up Active Admin's styles.
-//
-// To view the variables that Active Admin provides, take a look at
-// `app/assets/stylesheets/active_admin/mixins/_variables.scss` in the
-// Active Admin source.
-//
-// For example, to change the sidebar width:
-// $sidebar-width: 242px;
+//= require recurring_select
 
-// Active Admin's got SASS!
 @import "active_admin/mixins";
 @import "active_admin/base";
+@import "colors";
 @import "slides/defaults";
 
 #editor {
