Clean up markup and add autoprefixer

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -10,15 +10,8 @@ $green:   darken(#28a745, 10%);
 $teal:    darken(#20c997, 10%);
 $cyan:    darken(#17a2b8, 10%);
 $off_white: #fcf4ea;
+$black:   black;
 
-.available {
-  background-color: $green;
-}
-
-.unavailable {
-  background-color: $red;
-}
-
-.closed {
-  background-color: $purple;
-}
+.available { background-color: $green; }
+.unavailable { background-color: $red; }
+.closed { background-color: $purple; }
