--- a/app/views/layouts/screens/single/_bottom.html.erb
+++ b/app/views/layouts/screens/single/_bottom.html.erb
@@ -1,5 +1,5 @@
 <div class="room-details room-details__bottom full-height <%= room.decorate.available_class %>">
-  <div class="pt-4 d-flex justify-content-around align-items-base text-center">
+  <div class="pt-4">
     <div class="pt-4">
       <div class="d-flex flex-column">
         <div class="p-1">
