--- a/app/views/rooms/policies.html.erb
+++ b/app/views/rooms/policies.html.erb
@@ -1,5 +1,5 @@
 <div class="row pt-2">
-  <div class="col-md-12">
+  <div class="col-12">
     <%= Markdownify.render(@policy_md) %>
   </div>
 </div>
