--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,11 +1,11 @@
 <div class="row pt-2">
-  <div class="col-md-12">
+  <div class="col-12">
     <h1><%= t("site.app_name") %> - All Rooms</h1>
   </div>
 </div>
 
 <div class="row pt-2">
-  <div class="col-md-6">
+  <div class="col-6">
     <ul class="list-group">
       <% @rooms.each do |room| %>
         <li class="list-group-item"><%= link_to room.name, new_room_event_request_path(room) %></li>
