--- a/app/assets/stylesheets/slides/_defaults.scss
+++ b/app/assets/stylesheets/slides/_defaults.scss
@@ -12,16 +12,15 @@ h1#room-name {
   font-size: 24px;
 }
 
-#logo,
+.logo,
 .qrcode {
   img {
     height: 140px;
   }
 }
 
-#ou-logo {
+.ou-logo {
   img {
-    padding-top: 62px;
     height: 75px;
   }
 }
