--- a/app/views/layouts/screens/single/_bottom.html.erb
+++ b/app/views/layouts/screens/single/_bottom.html.erb
@@ -1,30 +1,25 @@
-<div class="room-details room-details__bottom full-height <%= room.decorate.available_class %>">
-  <div class="pt-4">
-    <div class="pt-4">
-      <div class="d-flex flex-column">
-        <div class="p-1">
-          <%= qr_code(room) %>
-        </div>
-        <div class="p-1">
-          <p><%= t("scan-qr-code_html") %></p>
-        </div>
+<div class="room-details room-details__bottom full-height <%= room.decorate.available_class %> px-2 pt-2">
+  <div class="container">
+    <div class="item">
+      <%= qr_code(room) %>
+      <p><%= t("scan-qr-code_html") %></p>
+    </div>
+    <div class="item grow text-center">
+      <h1 id="room-name">
+        <%= room.name %>
+      </h1>
+      <p id="up-next">
+        <%= room.decorate.availability %>
+      </p>
+      <div class="ou-logo">
+        <%= ohio_image %>
       </div>
     </div>
-
-    <div class="p-0">
-      <h1 id="room-name"><%= room.name %></h1>
-      <p id="up-next"><%= room.decorate.availability %></p>
-      <p id="ou-logo">
-        <%= ohio_image %>
-      </p>
-    </div>
-
-    <div class="pt-4">
-      <div class="d-flex flex-column">
-      <div class="p-1" id="logo">
+    <div class="item" style="float: right;">
+      <div class="logo pt-6">
         <%= patton_college_image %>
       </div>
-      <div class="p-1" id="clock">
+      <div class="pt-4" id="clock">
         <%= now_time %>
       </h2>
     </div>
