--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,17 +1,26 @@
 //  WCAG 2.0 compliant colors
-$blue:    darken(#007bff, 10%);
-$indigo:  darken(#6610f2, 10%);
-$purple:  darken(#6f42c1, 10%);
-$pink:    darken(#e83e8c, 10%);
-$red:     darken(#dc3545, 10%);
-$orange:  darken(#fd7e14, 10%);
-$yellow:  darken(#ffc107, 10%);
-$green:   darken(#28a745, 10%);
-$teal:    darken(#20c997, 10%);
-$cyan:    darken(#17a2b8, 10%);
-$off_white: #fcf4ea;
-$black:   black;
+$blue: darken(#007bff, 10%);
+$dark-blue: #2C4058;
+$indigo: darken(#6610f2, 10%);
+$purple: darken(#6f42c1, 10%);
+$pink: darken(#e83e8c, 10%);
+$red: darken(#dc3545, 10%);
+$orange: darken(#fd7e14, 10%);
+$yellow: darken(#ffc107, 10%);
+$green: darken(#28a745, 10%);
+$teal: darken(#20c997, 10%);
+$cyan: darken(#17a2b8, 10%);
+$off-white: #fcf4ea;
+$black: black;
 
-.available { background-color: $green; }
-.unavailable { background-color: $red; }
-.closed { background-color: $purple; }
+.available {
+  background-color: $green;
+}
+
+.unavailable {
+  background-color: $red;
+}
+
+.closed {
+  background-color: $dark-blue;
+}
