--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -2,18 +2,18 @@
 @import "toast";
 
 $border_width: 1px;
-$width: 720px - $border_width * 4;
-$height: 1280px - $border_width * 4;
+$width: 720px - $border_width * 2;
+$height: 1280px - $border_width * 2;
 $footer-height: $height * 0.20;
 $footer-half-height: $footer-height / 2;
 $slide-height: $height - $footer-height;
 
 body {
   border: 1px solid black;
-  color: $off_white;
+  color: $off-white;
   width: $width;
   height: $height;
-  background-color: $off_white;
+  background-color: $off-white;
   position: absolute;
   margin: 0;
   top: -280px;
@@ -34,28 +34,41 @@ body {
 
 .room-details__top,
 .room-details__bottom {
-  width: $width;
-  background-color: $red;
+  width: $width - 16;
   margin: 0;
   padding: 0;
   height: $footer-height;
-  color: $black;
+  color: white;
 
+  &.available {
+    color: black;
+  }
+
+  $qrcode_size: 65px;
 
   .qrcode {
-    height: 65px;
-    width: 65px;
+    height: $qrcode_size * 1.5;
+    width: $qrcode_size * 1.5;
     background-color: white;
+    padding: 5px;
+
+    img {
+      color: red;
+      height: $qrcode_size * 1.5;
+      width: $qrcode_size * 1.5;
+    }
   }
 
   &.half-height {
     height: $footer-half-height !important;
 
     .qrcode {
-      height: 65px;
+      height: $qrcode_size;
+      width: $qrcode_size;
 
       img {
-        height: 75px;
+        height: $qrcode_size;
+        width: $qrcode_size;
       }
     }
   }
@@ -64,14 +77,50 @@ body {
     font-size: 40px;
     font-weight: bold;
   }
+
+  .container {
+    height: 100%;
+    width: 100%;
+    display: table;
+  }
+
+  .item {
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  .item.grow {
+    width: 100%;
+  }
+}
+
+$arrow_from_y: 2rem;
+$arrow_from_x: 0.5rem;
+
+.room-details {
+  &.half-height {
+    .item {
+      min-width: 80px;
+    }
+  }
 }
 
 .room-details__top {
   &.half-height {
     .arrow {
-      margin-top: -30px;
-      -webkit-transform: rotate(180deg);
+      position: absolute;
+      top: $arrow_from_y;
+      right: $arrow_from_x;
       transform: rotate(180deg);
+    }
+  }
+}
+.room-details__bottom {
+  &.half-height {
+    .arrow {
+      position: absolute;
+      bottom: $arrow_from_y;
+      left: $arrow_from_x;
     }
   }
 }
@@ -83,25 +132,28 @@ p {
   line-height: 14px;
 }
 
-$gutter: 12px;
-$col-width: ($width - $gutter)/ 12;
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pt-4 {
-  padding-top: 0.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-0 {
-  padding: 0rem;
-}
-
-.px-2 {
-  padding: 0rem 0.5rem 0rem 0.25rem
+@for $i from 0 through 6 {
+  .p-#{$i} {
+    padding: 0.25rem * $i;
+  }
+  .pt-#{$i} {
+    padding-top: 0.25rem * $i;
+  }
+  .pl-#{$i} {
+    padding-left: 0.25rem * $i;
+  }
+  .pb-#{$i} {
+    padding-bottom: 0.25rem * $i;
+  }
+  .pr-#{$i} {
+    padding-right: 0.25rem * $i;
+  }
+  .px-#{$i} {
+    padding-left: 0.25rem * $i;
+    padding-right: 0.25rem * $i;
+  }
+  .py-#{$i} {
+    padding-top: 0.25rem * $i;
+    padding-bottom: 0.25rem * $i;
+  }
 }
