--- a/app/views/layouts/screens/_too_many_rooms.html.erb
+++ b/app/views/layouts/screens/_too_many_rooms.html.erb
@@ -1,11 +1,11 @@
 <div class="grid">
-  <div class="grid__col grid__col--12-of-12">
+  <div class="grid-col grid-col-12">
     <h1>ERROR</h1>
   </div>
 </div>
 
 <div class="grid">
-  <div class="grid__col grid__col--12-of-12">
+  <div class="grid-col grid-col-12">
     <p><%= @screen.name %> has too many rooms configured; Please remove extra rooms or change your layout</p>
   </div>
 </div>
