--- a/app/views/slides/_all-schedule-slide.html.erb
+++ b/app/views/slides/_all-schedule-slide.html.erb
@@ -7,8 +7,8 @@
   }
   div.all-schedule-frame table th {
     text-align: left;
-    padding: 0.5em;
-    font-size: 20px;
+    padding: 0.25em;
+    font-size: 14px;
     font-weight: bold;
     border-bottom: 1px solid #08324f;
     color: black;
@@ -41,8 +41,8 @@
 <% all_times = Time.current.floor_to(60.minutes).ranged_by(4.hours, step: 30.minutes) %>
 <% all_rooms = Room.all.decorate %>
 <!-- Markup/Logic -->
-<div class="grid text-center px-2">
-  <div class="grid__col grid__col--12-of-12 all-schedule-frame">
+<div class="grid text-center">
+  <div class="grid-col grid-col-12 all-schedule-frame">
     <h3>Project Room Availability</h3>
     <table align="center">
       <tr>
