Make screens responsive

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
 
     <%= stylesheet_link_tag "application", media: "all", 'data-turbolinks-track': "reload" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track': "reload" %>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <%= content_tag :body, class: [controller_name.classify, action_name.classify].join do %>
